--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
-Flask==1.1.2
+Flask==1.1.1
+Flask-SQLAlchemy==2.4.0
 gunicorn==19.9.0
-itsdangerous==1.1.0
-Jinja2==2.10.1
-MarkupSafe==1.1.1
-Werkzeug==0.15.5
-numpy==1.18.1
-scikit-learn==0.22.1
-pandas==1.0.1
-joblib==0.14.1
+pandas==0.25.0
+requests==2.22.0
+scikit-learn==0.21.2
+scipy==1.3.1
